--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="AppThemeS" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:navigationBarColor" tools:ignore="NewApi">#fff</item>
+    </style>
 </resources>
